fix: card shadow in dark mode was too jarring

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -156,6 +156,13 @@ body.body--dark {
     background-color: $secondary-contrast-dark;
     color: $secondary-contrast;
   }
+
+  .q-card {
+    box-shadow:
+      0 1px 5px $shadow,
+      0 2px 2px $shadow,
+      0 3px 1px -2px $shadow;
+  }
 }
 
 .list-droppable {
